--- a/docs/T7_Divers/CTF2025.md
+++ b/docs/T7_Divers/CTF2025.md
@@ -1,3 +1,6 @@
+:warning: *Attention cette page disparaîtra du site mardi 21 janvier. Vous pourrez toujours me demander votre lien sur Discord.*
+
+
 **Engel**			
             
 Laurent DIMÉNÉ	1G10		https://www.passetonhack.fr/api/login/c2b23455441aebe0b06de595a4a7ffed9989e98e456991761784d1a6380de43e
